Fixed overlapping issue with song player, and comments not showing up initially on song page.

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -131,3 +131,7 @@
 #profile-dropdown:hover, #logout:hover, #prof-but:hover, #popup>*:hover {
   cursor: pointer;
 }
+
+.song-player {
+  padding-bottom: 80px;
+}
